--- a/Index.html
+++ b/Index.html
@@ -155,7 +155,7 @@
                     <center><h12>Path Finding Algorithm -</h12><span><em> Python</em></span></center>
                     <li>Developed by myself. A path finding algorithm where the user identifies the start and end points, identifies any blockage points, and the algorithm will find the shortest possible path to take. 
                     </li>
-                    <center><h10>Robotic Car Project -</h10><span><em> Python</em></span></center>
+                    <center><h10>Robotic Car Project -</h10><span><em> Arduino C</em></span></center>
                     <li>Designed a Java-Arduino system to control an autonomous robotic car, enabling real-time distance sensing, mode switching, and non-blocking communication for remote and autonomous operation.
                     </li>
                 </ul>
