--- a/Index.html
+++ b/Index.html
@@ -105,7 +105,7 @@
                             <center><li> I am highly proficient in Python and proficient in HTML.</li></center>
                             <center><li>I would categorize myself as competent in javascript, CSS, and Arduino C, while being an advanced beginner in Verilog.</li></center>
                             <center><p><h14>Technologies:</h14></p></center>
-                            <center><li> The main tech I use is Visual Studio Code, and I have background in Jupyter Notebook, ReactJS, and Colabratory </li></center>
+                            <center><li> The main tech I use is Visual Studio Code, and I have background in Jupyter Notebook, ReactJS, Colabratory, and the Arduino IDE </li></center>
                         </ul>
                     </p>
                     </p>
