--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
         <div class="About-sec">
             <div class="about-content">  
                 <div class="left">
-                    <img src="images/biz-1-pose-5.png" class="point">
+                    <img src="images/biz-1-pose-5.png" class="ppoint">
 
                 </div>
                 <!-- left side  -->
